WebContent/CSS/login.css
body{
	width: 100%;   
	height: 100%;   
	background: #58068C;
	overflow: auto;
	font-family: "Helvetica Neue", Helvetica, sans-serif;   
	-webkit-font-smoothing: antialiased;   
}
#form{
	margin: 0 auto;
	margin-top: 5ex;
}
input{
	width: 50%;
	height: 10%;
	margin-top: 3%;
	margin-left:25%;
	cursor:pointer; 
	padding: 3%; 
	background: black; 
	border:1px solid white; 
	border-radius: 2em;
	color:#f3f3f3;
	font-size:2.5em;	
	text-align: center;
}
input[type=submit]{
	cursor: pointer;
	text-align: center;
	color:#f3f3f3;
    
	
}
#stern_logo{
	width: 75%;
	height: 40%;
	margin-left: 12.5%;
}
p{
	text-align: center;
	color: white;
	
}
 input[type="date"]:before {
    content: attr(placeholder) !important;
    color: #aaa;
    margin-right: 0.5em;
  }
  input[type="date"]:focus:before,
  input[type="date"]:valid:before {
    content: "";
  }

